@@ -4,6 +4,8 @@
        log message. (Stefan)
 - ADD: It's possible to turn off the context menu
        icons completely with a registry setting. (Stefan)
+- CHG: when setting properties fails, the error message
+       is shown and not dropped as before. (Stefan)
 - CHG: Don't use the %APPDATA% env but the shell API to
        get the path to the config file in the settings
        dialog. (Stefan)
